<resources>
    <string name="app_name">gym-android</string>
    <string name="info_page_description">Entrenamiento 100% personalizado para personas dispuestas a cumplir sus objetivos y lograr resultado</string>
    <string name="info_page_location">Ubicación</string>
    <string name="info_page_whatsapp">WhatsApp</string>
    <string name="info_page_facebook">Facebook</string>
    <string name="info_page_yape">Yape</string>

    <string name="info_page_data_location">Av.Tupac Amaru 1204 Comas 51 Lima, Perú</string>
    <string name="info_page_data_whatsapp">+51 993 426 151</string>
    <string name="info_page_data_facebook">TecFitPersonalTrainingCenter</string>
    <string name="info_page_data_yape">+51 993 426 151</string>
    <string name="info_page_costos_title">Costos</string>
    <string name="info_page_mensualidad_title">Mensualidad</string>
    <string name="info_page_promocion_title">Promoción</string>
    <string name="info_page_mensualidad_costo">S/. 80.00</string>
    <string name="info_page_promocion_costo">S/. 150.00 x 3 meses</string>
    <string name="info_page_entrenadores_title">Entrenadores</string>

    <string name="start_page_button">Comencemos</string>

    <string name="login_title">Inicio de Sesión</string>
    <string name="login_email_hint">Ingrese su correo electrónico</string>
    <string name="login_password_hint">Ingrese su contraseña</string>
    <string name="login_email_error_message">El correo es incorrecto, vuelva a intentarlo.</string>
    <string name="login_password_error_message">La contraseña es incorrecta, vuelva a intentarlo.</string>
    <string name="login_forgot_password"><u>¿Olvidó su contraseña?</u></string>
    <string name="login_enter">Ingresar</string>
    <string name="login_enter_google">Continuar con Google</string>
    <string name="login_register">¿Eres nuevo? \nPara registrarte presiona <u>aquí</u></string>

    <string name="register_title">Regístrate</string>
    <string name="register_name_hint">Ingrese su nombre</string>
    <string name="register_lastname_hint">Ingrese sus apellidos</string>
    <string name="register_phone_hint">Ingrese su teléfono</string>
    <string name="register_email_hint">Ingrese su correo electrónico</string>
    <string name="register_password_hint">Ingrese su contraseña</string>
    <string name="register_enter">Registrarse</string>
    <string name="register_enter_google">Continuar con Google</string>
    <string name="register_login">¿Ya tienes una cuenta? \nPara iniciar presione <u>aquí</u></string>
    <string name="register_error_message">Debe completar el campo</string>

    <string name="verify_email_title">Verificación de\ncorreo</string>
    <string name="verify_email_description">Se te ha enviado un link de verificación\na tu correo electrónico.</string>
    <string name="verify_email_description_spam">Si no lo encuentras en tu bandeja de entrada revisa en spam.</string>
    <string name="verify_email_access_login">Presione <u>aquí</u> para regresar al login</string>

    <string name="profile_user_title">Perfil</string>
    <string name="profile_user_edit_link"><u>Editar</u></string>
    <string name="profile_user_save_link"><u>Guardar</u></string>
    <string name="profile_user_active_membership">Membresía Activa</string>
    <string name="profile_user_phone_title">Teléfono</string>
    <string name="profile_user_time_membership">Tiempo restante de membresía</string>
    <string name="profile_user_notification">Notificación de membresía</string>
    <string name="profile_user_log_out">Cerrar Sesión</string>

    <string name="recover_password_mail_title">Recuperar Contraseña</string>
    <string name="recover_password_email_hint">Ingrese su correo electronico</string>
    <string name="recover_password_email_enter">Continuar</string>
    <string name="recover_password_email_error_message">El correo es incorrecto, vuelva a intentarlo.</string>
    <string name="recover_password_code_info">Ingrese el código que se le envió a su correo electrónico.</string>
    <string name="recover_password_code_enter">Continuar</string>
    <string name="recover_password_code_error_message">El código es incorrecto, vuelva a intentarlo.</string>
    <string name="recover_password_new_password_hint">Ingrese su nueva contraseña</string>
    <string name="recover_password_new_password_error">Debe ingresar una contraseña</string>
    <string name="recover_password_new_password_two_hint">Nuevamente ingrese su contraseña</string>
    <string name="recover_password_new_password_two_error">Ambas contraseñas deben ser iguales.</string>
    <string name="recover_password_new_enter">Guardar</string>

    <string name="product_list_void_message">Lo sentimos\nNo contamos con este producto</string>

    <string name="exercise_button_process">En Proceso</string>
    <string name="exercise_button_filled">Completado</string>
    <string name="exercise_break_to_repetitions">Continuar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
