<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyEmailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/michroma_regular"
            android:textSize="28sp"
            android:text="@string/verify_email_title"
            android:gravity="center"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/verify_email_description"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:textColor="@color/semi_white"
                android:text="@string/verify_email_description_spam"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/verify_email_access_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:textColor="?colorOnPrimary"
            android:text="@string/verify_email_access_login"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"/>



    </LinearLayout>

</FrameLayout>